--- a/benchmarks.Rmd
+++ b/benchmarks.Rmd
@@ -17,25 +17,26 @@ stock_list_raw <- jsonlite::fromJSON("http://internalservices.ices.local:60/api/
 benchmark_list <- function(type,
                            year,
                            active_year = NULL) {
+
   type <- rlang::enquo(type)
-
-
+  year <- rlang::enquo(year)
+  
   if(is.null(active_year)){
   active_year <- as.numeric(format(Sys.Date(), format = "%Y"))
+  active_year <-  rlang::enquo(active_year)
   } 
   
-  if(!is.numeric(active_year)){
-    stop("Year values must be numeric.")
-  }
-  
   stock_list_raw %>% 
-    filter(rlang::UQ(type) == year & 
-             ActiveYear == active_year) %>% 
+    filter(rlang::UQ(type) %in% rlang::UQ(year) & 
+             ActiveYear == rlang::UQ(active_year)) %>% 
     arrange(ExpertGroup) %>% 
-    mutate(DataCategory = floor(as.numeric(DataCategory)),
-           WKname = NA,
-           WKdate = NA,
-           WKchair = NA) %>% 
+    mutate(StockKeyLabel = as.factor(StockKeyLabel),
+           StockKeyDescription = as.factor(StockKeyDescription),
+           ExpertGroup = as.factor(ExpertGroup),
+           DataCategory = as.factor(floor(as.numeric(DataCategory))),
+           WKname = as.factor(NA),
+           WKdate = as.factor(NA),
+           WKchair = as.factor(NA)) %>% 
     select(`Stock code` = StockKeyLabel,
            `Stock name` = StockKeyDescription,
            `Data category` = DataCategory,
@@ -46,9 +47,15 @@ benchmark_list <- function(type,
     distinct(.keep_all = TRUE) %>% 
     DT::datatable(.,
                   rownames = FALSE,
-                  options = list(pageLength = 20, dom = "tip")
+                  filter = "top",
+                  options = list(pageLength = 20,
+                                 dom = "tip")
     )
 }
+
+this_year <- as.numeric(format(Sys.Date(), format = "%Y"))
+next_year <- this_year + 1
+later_years <- c(next_year, next_year + 1)
 
 ```
 
@@ -56,59 +63,19 @@ benchmark_list <- function(type,
 
 ## Benchmark Overview {.tabset .tabset-fade}
 
-### 2017 Benchmarks
-```{r benchmarks_2017, echo = FALSE}
+### `r this_year` Benchmarks
+```{r this_year_benchmark, echo = FALSE}
 
 benchmark_list(type = PlannedBenchmark,
-               year = 2017,
-               active_year = 2017)
-# 
-# stock_list_raw %>% 
-#   filter(PlannedBenchmark == 2017,
-#          ActiveYear == 2017) %>% 
-#   arrange(ExpertGroup) %>% 
-#   mutate(DataCategory = floor(as.numeric(DataCategory))) %>% 
-#   select(`Stock code` = StockKeyLabel,
-#         `Stock name` = StockKeyDescription,
-#         `Expert group` = ExpertGroup,
-#         `Stock coordinator` = StockCoordinator1,
-#         `Data category` = DataCategory) %>% 
-#   distinct(.keep_all = TRUE) %>% 
-#   DT::datatable(.,
-#                 rownames = FALSE,
-#                 options = list(pageLength = 20, dom = "tip")
-#                 )
-
+               year = this_year)
 ```
 
-### 2018 Benchmarks
-```{r benchmarks_2018, echo = FALSE}
+### `r next_year` Benchmarks
+```{r next_year_benchmark, echo = FALSE}
 
 benchmark_list(type = PlannedBenchmark,
-               year = 2018,
+               year = next_year,
                active_year = 2017)
-
-# stock_list_raw %>% 
-#   filter(PlannedBenchmark == 2018,
-#          ActiveYear == 2017) %>% 
-#   arrange(ExpertGroup) %>% 
-#   mutate(DataCategory = floor(as.numeric(DataCategory)),
-#          WKName = case_when(grepl("anf\\.|ank\\.|mon\\.", StockKeyLabel) ~ "WKAnglerfish-2018",
-#                             grepl("fle\\.|lem\\.|whg\\.|wit\\.|bll\\.", StockKeyLabel) ~ "WKNS_2018",
-#                             grepl("her\\.|ane\\.", StockKeyLabel) ~ "WKPela_2018",
-#                             grepl("reb\\.|reg\\.", StockKeyLabel) ~ "WKRedfish_2018",
-#                             TRUE ~ NA_character_)) %>% 
-#   select(`Stock code` = StockKeyLabel,
-#          `Stock name` = StockKeyDescription,
-#          `Expert group` = ExpertGroup,
-#          `Workshop name` = WKName,
-#          `Stock coordinator` = StockCoordinator1,
-#          `Data category` = DataCategory) %>% 
-#   distinct(.keep_all = TRUE) %>% 
-#   DT::datatable(.,
-#                 rownames = FALSE,
-#                 options = list(pageLength = 20, dom = "tip")
-#   )
 
 ```
 
@@ -116,24 +83,7 @@ benchmark_list(type = PlannedBenchmark,
 ```{r benchmarks_proposed, echo = FALSE}
 
 benchmark_list(type = ProposedBenchmark,
-               year = 2018,
-               active_year = 2017)
-# 
-# stock_list_raw %>% 
-#   filter(ProposedBenchmark >= 2018,
-#          ActiveYear == 2017) %>% 
-#   arrange(ExpertGroup) %>% 
-#   mutate(DataCategory = floor(as.numeric(DataCategory))) %>% 
-#   select(`Stock code` = StockKeyLabel,
-#         `Stock name` = StockKeyDescription,
-#         `Expert group` = ExpertGroup,
-#         `Stock coordinator` = StockCoordinator1,
-#         `Data category` = DataCategory) %>% 
-#   distinct(.keep_all = TRUE) %>% 
-#   DT::datatable(.,
-#                 rownames = FALSE,
-#                 options = list(pageLength = 20, dom = "tip")
-#                 )
+               year = later_years)
 
 ```
 
