--- a/benchmarks.Rmd
+++ b/benchmarks.Rmd
@@ -67,7 +67,7 @@ later_years <- c(next_year, next_year + 1)
 ### `r this_year` Benchmarks
 ```{r this_year_benchmark, echo = FALSE}
 
-benchmark_list(type = PlannedBenchmark,
+benchmark_list(type = LatestBenchmark,
                year = this_year)
 ```
 
