--- a/benchmarks.Rmd
+++ b/benchmarks.Rmd
@@ -10,7 +10,7 @@ knitr::opts_chunk$set(echo = TRUE)
 library(dplyr)
 library(DT)
 library(rmarkdown)
-
+# 
 stock_list_raw <- jsonlite::fromJSON("http://internalservices.ices.local:60/api/SDInternalDWs",
                                      simplifyDataFrame = TRUE)
 
@@ -29,8 +29,7 @@ benchmark_list <- function(type,
   
   
   stock_list <- stock_list_raw %>% 
-    # filter(ActiveYear == rlang::UQ(active_year))
-    filter(ActiveYear == 2017) %>% 
+    filter(ActiveYear == rlang::UQ(active_year)) %>% 
     distinct(.keep_all = TRUE)
   
   # Format so the species names will be italicized
@@ -71,9 +70,10 @@ benchmark_list <- function(type,
            StockKeyDescription = as.factor(StockKeyDescription),
            ExpertGroup = as.factor(ExpertGroup),
            DataCategory = as.factor(floor(as.numeric(DataCategory))),
-           WKname = as.factor(NA),
-           WKdate = as.factor(NA),
-           WKchair = as.factor(NA)) %>% 
+           WKname = as.factor(NA), # Will be added from new web service
+           WKdate = as.factor(NA), # Will be added from new web service
+           WKchair = as.factor(NA) # Will be added from new web service
+           ) %>% 
     select(`Stock code` = StockKeyLabel,
            `Stock name` = StockKeyDescription,
            `Data category` = DataCategory,
@@ -107,7 +107,7 @@ later_years <- c(next_year, next_year + 1)
 ```{r this_year_benchmark, echo = FALSE}
 
 benchmark_list(type = LatestBenchmark,
-               year = this_year)
+               year = this_year, active_year = 2017)
 ```
 
 ### `r next_year` Benchmarks
