--- a/benchmarks.Rmd
+++ b/benchmarks.Rmd
@@ -95,7 +95,7 @@ benchmark_list <- function(type,
 
 this_year <- as.numeric(format(Sys.Date(), format = "%Y"))
 next_year <- this_year + 1
-later_years <- c(next_year, next_year + 1)
+later_years <- c(next_year, next_year + 5)
 
 ```
 
@@ -107,7 +107,7 @@ later_years <- c(next_year, next_year + 1)
 ```{r this_year_benchmark, echo = FALSE}
 
 benchmark_list(type = LatestBenchmark,
-               year = this_year, active_year = 2017)
+               year = this_year)
 ```
 
 ### `r next_year` Benchmarks
